swagger documentation added but not tested
