# pkg/api/handler/user/work.go
@@ -22,6 +22,15 @@ func NewWorkHandler(use interfaces.WorkUsecase) *WorkHandler {
 	}
 }
 
+// @Summary		List New Opening
+// @Description	 A user can list a new opening through this endpoint
+// @Tags			User
+// @Accept			json
+// @Produce		json
+// @Param			work	body		domain.Work	true	"work details"
+// @Success		200		{object}	response.Response{}
+// @Failure		500		{object}	response.Response{}
+// @Router			/user/works [post]
 func (p *WorkHandler) ListNewOpening(c *gin.Context) {
 	var model domain.Work
 	if err := c.BindJSON(&model); err != nil {
@@ -45,6 +54,15 @@ func (p *WorkHandler) ListNewOpening(c *gin.Context) {
 
 }
 
+// @Summary		Get All Listed Works
+// @Description	 An endpoint to display all the listed works of a user
+// @Tags			User
+// @Accept			json
+// @Produce		json
+// @Param			id	query		string	true	"id"
+// @Success		200		{object}	response.Response{}
+// @Failure		500		{object}	response.Response{}
+// @Router			/user/works [get]
 func (p *WorkHandler) GetAllListedWorks(c *gin.Context) {
 
 	id, err := strconv.Atoi(c.Query("id"))
@@ -67,6 +85,15 @@ func (p *WorkHandler) GetAllListedWorks(c *gin.Context) {
 
 }
 
+// @Summary		Get All Completed Works
+// @Description	 An endpoint to display all the completed works of a user
+// @Tags			User
+// @Accept			json
+// @Produce		json
+// @Param			id	query		string	true	"id"
+// @Success		200		{object}	response.Response{}
+// @Failure		500		{object}	response.Response{}
+// @Router			/user/works/completed [get]
 func (p *WorkHandler) ListAllCompletedWorks(c *gin.Context) {
 
 	id, err := strconv.Atoi(c.Query("id"))
@@ -89,6 +116,15 @@ func (p *WorkHandler) ListAllCompletedWorks(c *gin.Context) {
 
 }
 
+// @Summary		Get All Ongoing Works
+// @Description	 An endpoint to display all the Ongoing works of a user
+// @Tags			User
+// @Accept			json
+// @Produce		json
+// @Param			id	query		string	true	"id"
+// @Success		200		{object}	response.Response{}
+// @Failure		500		{object}	response.Response{}
+// @Router			/user/works/on-going [get]
 func (p *WorkHandler) ListAllOngoingWorks(c *gin.Context) {
 
 	id, err := strconv.Atoi(c.Query("id"))
@@ -111,6 +147,15 @@ func (p *WorkHandler) ListAllOngoingWorks(c *gin.Context) {
 
 }
 
+// @Summary		Work details
+// @Description	 An endpoint to display deatails of works of a user
+// @Tags			User
+// @Accept			json
+// @Produce		json
+// @Param			id	query		string	true	"id"
+// @Success		200		{object}	response.Response{}
+// @Failure		500		{object}	response.Response{}
+// @Router			/user/works/:id [get]
 func (p *WorkHandler) WorkDetails(c *gin.Context) {
 
 	work_id, err := strconv.Atoi(c.Param("id"))
@@ -133,6 +178,15 @@ func (p *WorkHandler) WorkDetails(c *gin.Context) {
 
 }
 
+// @Summary		Assign Work To A Provider
+// @Description	 An endpoint to assign the work to a particular provider
+// @Tags			User
+// @Accept			json
+// @Produce		json
+// @Param			pro_id	query		string	true	"pro id"
+// @Success		200		{object}	response.Response{}
+// @Failure		500		{object}	response.Response{}
+// @Router			/user/works/:id/assign [put]
 func (p *WorkHandler) AssignWorkToProvider(c *gin.Context) {
 
 	work_id, err := strconv.Atoi(c.Param("id"))
@@ -168,6 +222,15 @@ func (p *WorkHandler) AssignWorkToProvider(c *gin.Context) {
 
 }
 
+// @Summary		Make Work As Completed
+// @Description	 An endpoint to make the work status as completed
+// @Tags			User
+// @Accept			json
+// @Produce		json
+// @Param			pro_id	query		string	true	"pro id"
+// @Success		200		{object}	response.Response{}
+// @Failure		500		{object}	response.Response{}
+// @Router			/user/works/:id/complete [put]
 func (p *WorkHandler) MakeWorkAsCompleted(c *gin.Context) {
 
 	work_id, err := strconv.Atoi(c.Param("id"))
@@ -190,6 +253,15 @@ func (p *WorkHandler) MakeWorkAsCompleted(c *gin.Context) {
 
 }
 
+// @Summary		Rate Work
+// @Description	 Rate The Work By A Provider
+// @Tags			User
+// @Accept			json
+// @Produce		json
+// @Param			rating	body		models.RatingModel	true	"Rating "
+// @Success		200		{object}	response.Response{}
+// @Failure		500		{object}	response.Response{}
+// @Router			/user/works/:id/rate [post]
 func (p *WorkHandler) RateWork(c *gin.Context) {
 
 	workID, err := strconv.Atoi(c.Param("id"))
